--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-USERNAME="testCounter"
+USERNAME="Centro Comercial Meridiano"
 PASS="test"
+URLLOGIN="http://10.150.143.110:3000/counter/login"
+URLUPDATE="http://10.150.143.110:3000/counter/update-values"
