Added capability to stream video to server

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 USERNAME="Centro Comercial Meridiano"
 PASS="test"
-URLLOGIN="http://10.150.143.110:3000/counter/login"
-URLUPDATE="http://10.150.143.110:3000/counter/update-values"
+URLLOGIN="http://localhost:8080/api/"
+URLUPDATE="http://localhost:8080/api/people-counter"
