--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-USERNAME="Centro Comercial Meridiano"
-PASS="test"
-URLLOGIN="http://localhost:8080/api/"
 URLUPDATE="http://localhost:8080/api/people-counter"
+RTMPURL="rtmp://localhost/live/counter"
